add git add --all!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div>
         Il était une fois, un jedi qui s'appelait Anakin Skywalker. et le Créateur mis fin a son règne de terreur.
         vive WHYH mon Seigneur !!
+        it's the best!!!!!!!
     </div>
 </body>
 </html>
