feat: ul list ship

--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
         </ul>
     
     </div>
+    <ul>
+        <li> 1. Vaisseau falcon</li>
+        <li> 2. Vaisseau empire spaceship</li>
+        <li> 3. Vaisseau X win</li>
+    </ul>
 </body>
 </html>
