--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>Darth Maul</li>
             <li>Darth Sidious</li>
             <li>Darth Tyranus</li>
-            <li>Darth Nihilus</li>
+            <li>Darth Nihilus!!</li>
         </ul>
     
     </div>
