--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
         <li> 2. Vaisseau empire spaceship</li>
         <li> 3. Vaisseau X win</li>
     </ul>
+    <div>
+        <h2> Planetes </h2>
+    </div>
 </body>
 </html>
