--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div>
         <h2> Planetes </h2>
         <div> 
-            Tatooine
+            - Tatooine
         </div>
     
     </div>
