--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Les chevaliers noirs !!</h1>
+    <h1>Les chevaliers noirs</h1>
 
     <div>
         Il était une fois, un jedi qui s'appelait Anakin Skywalker. et le Créateur mitq fin a son règne de terreur.
