--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         Il était une fois, un jedi qui s'appelait Anakin Skywalker. et le Créateur mitq fin a son règne de terreur.
         vive WHYH mon Seigneur !!
-        it's the best!!!!!!!
+        it's the best!!!!!
     </div>
     <div>
         <p>Voici une liste de mes chevaliers noirs préférés :</p>
